--- a/static/css/main.css
+++ b/static/css/main.css
@@ -142,3 +142,10 @@ section .main-body{
 #avatar img:hover {
     transform: translateY(-5px); /* 鼠标放上去会上浮一点点 */
 }
+
+/* --- 强制去除所有背景遮罩 --- */
+.top-section::before, 
+.top-bg::before {
+    display: none !important;
+    background: none !important;
+}
